--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@ body {
 }
 
 .navbar-brand {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
     font-family: serif;
     font-size: 2rem;
     color: var(--primary-color) !important;
@@ -96,18 +99,21 @@ body {
 
 .mobile-menu-content {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .mobile-menu-header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     margin-bottom: 50px;
 }
 
 .close-btn {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
     background: none;
     border: none;
     font-size: 2.5rem;
