--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,55 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Poppins, sans-serif;
 }
 
+p{
+    font-family: Poppins;
+}
+
+h1{
+    font-family: Poppins;
+
+}
+
+h2{
+    font-family: Poppins;
+}
+
+h3{
+    font-family: Poppins;
+}
+
+
+
+
+h4{
+    font-family: Poppins;
+}
+
+strong{
+    font-family: Poppins;
+}
+
+
+
+
+
 .navbar-brand {
-    font-family: serif;
+    font-family: Poppins;
     font-size: 2rem;
     color: var(--primary-color) !important;
 }
 
+.center-items{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
 .menu-btn {
+    font-family:  Poppins;;
     border: 1px solid var(--primary-color);
     border-radius: 50px;
     padding: 8px 24px;
@@ -505,6 +544,7 @@ body {
 }
 
 .learn-more-btn {
+    font-family: Poppins;
     display: inline-block;
     padding: 15px 35px;
     border: 1.5px solid var(--primary-color);
@@ -512,6 +552,7 @@ body {
     text-decoration: none;
     font-size: 0.95rem;
     font-weight: 600;
+    border-radius: 300px;
     letter-spacing: 0.05em;
     margin-top: 30px;
     transition: all 0.3s ease;
@@ -620,7 +661,7 @@ body {
     }
 
     .learn-more-btn {
-        width: 100%;
+        width: 70%;
         text-align: center;
         padding: 12px 20px;
     }
@@ -680,6 +721,7 @@ body {
 }
 
 .see-more-btn {
+    font-family: Poppins;
     display: inline-block;
     padding: 15px 40px;
     border: 1.5px solid var(--primary-color);
@@ -687,6 +729,7 @@ body {
     text-decoration: none;
     font-size: 1rem;
     font-weight: 600;
+    border-radius: 300px;
     letter-spacing: 0.05em;
     transition: all 0.3s ease;
 }
@@ -932,15 +975,17 @@ body {
 }
 
 .journal-content h3 {
+    font-family: Poppins;
     font-size: 1.25rem;
-    font-weight: 700;
+    font-weight: 500;
     line-height: 1.3;
     margin-bottom: 15px;
     color: var(--primary-color);
 }
 
 .journal-content p {
-    font-size: 1rem;
+    font-family: Poppins;
+    font-size: 0.9rem;
     color: #666;
     margin-bottom: 20px;
     line-height: 1.5;
@@ -975,6 +1020,7 @@ body {
 }
 
 .show-more-btn {
+    font-family: Poppins;
     display: inline-block;
     padding: 15px 40px;
     border: 1.5px solid var(--primary-color);
@@ -983,6 +1029,7 @@ body {
     font-size: 1rem;
     font-weight: 600;
     letter-spacing: 0.05em;
+    border-radius: 300px;
     transition: all 0.3s ease;
     margin-top: 20px;
 }
@@ -1069,3 +1116,5 @@ body {
 .nav-link.dropdown-toggle::after {
     display: none;
 }
+
+
